<resources>
    <string name="app_name">Shop Master</string>
    <string name="log_in">Login</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="shop">Shop</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_a_new_account">Register a New Account</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="change_password">Change Password</string>
    <string name="shopping_master">Log into Your Account</string>
    <string name="admin">Admin</string>
    <string name="order_history">Order History</string>
    <string name="main_menu">Main Menu</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="admin_tools">Admin Tools</string>
    <string name="add_a_product_to_database">Add a Product to Database</string>
    <string name="modify_a_product_in_database">Modify a Product in Database</string>
    <string name="remove_a_product_from_database">Remove a Product from Database</string>
    <string name="users_list">Users List</string>
    <string name="change_users_permissions">Change Users Permissions</string>
    <string name="admin_permit_on_off">Admin Permit On/Off</string>
    <string name="delete_account">Delete Account</string>
    <string name="manage_users_accounts">Manage Users Accounts</string>
    <string name="new_password">new password</string>
    <string name="current_password">current password</string>
    <string name="password_change">Password Change</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="manage_products">Manage Products</string>
    <string name="add_a_new_product">Add a New Product</string>
    <string name="remove_product">Remove Product</string>
    <string name="product_name">product name</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="description">description</string>
    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="update_product_data">Update Product Data</string>
    <string name="select_a_user_account">Select a user account:</string>
    <string name="select_a_product">Select a product:</string>
    <string name="select_an_item">Select an item:</string>
    <string name="search_for_an_item">Search for an Item</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="go_to_shopping_cart">Go to Shopping Cart</string>
    <string name="set_quantity">set quantity</string>
    <string name="select_to_update">Select to Update</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="remove_item">Remove Item</string>
    <string name="order_detail">Order Detail</string>
    <string name="back">Back</string>
    <string name="select_an_item_for_detail">Select an item for detail:</string>
    <string name="product_detail_on_stock">Product detail on stock:</string>
    <string name="select_an_order_for_detail">Select an order for detail:</string>
    <string name="place_order">Place Order</string>
    <string name="total_price">total price</string>
    <string name="admin_off_on">Admin OFF/ON</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="remove_all">Remove All</string>
    <string name="clear">clear</string>
    <string name="clear_search">Clear Search</string>
    <string name="search">Search</string>
    <string name="apply_quantity">Apply Quantity</string>
</resources>