<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <TextView
        android:id="@+id/add_product_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_a_new_product"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_product_name_edittext"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:hint="@string/product_name"
        android:inputType="text"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_product_textview" />

    <EditText
    android:id="@+id/add_product_quantity_edittext"
    android:layout_width="255dp"
    android:layout_height="55dp"
    android:layout_marginTop="12dp"
    android:hint="@string/quantity"
    android:inputType="number"
    android:textAlignment="textStart"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/add_product_name_edittext" />

    <EditText
        android:id="@+id/add_product_price_edittext"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_product_quantity_edittext" />

    <EditText
        android:id="@+id/add_product_description_edittext"
        android:layout_width="255dp"
        android:minHeight="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength ="72"
        android:maxLines ="3"
        android:scrollHorizontally="false"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_product_price_edittext" />

    <Button
        android:id="@+id/add_a_product_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="30dp"
        android:text="@string/add_product"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_product_description_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>