<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity">

    <TextView
        android:id="@+id/shop_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/shop"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/shop_search_edittext"
        android:layout_width="234dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/search_for_an_item"
        android:inputType="textAutoComplete"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_textview" />

    <ImageButton
        android:id="@+id/shop_search_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@id/shop_search_edittext"
        app:layout_constraintEnd_toStartOf="@id/shop_clear_button"
        app:layout_constraintTop_toTopOf="@id/shop_search_edittext"
        app:layout_constraintBottom_toBottomOf="@id/shop_search_edittext"
        app:srcCompat="@drawable/search"
        android:contentDescription="@string/search" />

    <ImageButton
        android:id="@+id/shop_clear_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@id/shop_search_button"
        app:layout_constraintTop_toTopOf="@id/shop_search_edittext"
        app:layout_constraintBottom_toBottomOf="@id/shop_search_button"
        app:srcCompat="@drawable/clear"
        android:contentDescription="@string/clear_search" />

    <TextView
        android:id="@+id/items_list_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_an_item"
        android:textAlignment="textStart"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_search_edittext" />

    <ScrollView
        android:id="@+id/shop_list_scrollview"
        android:layout_width="374dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/items_list_textview">

        <ListView
            android:id="@+id/shop_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/items_list_textview" />
    </ScrollView>

    <EditText
        android:id="@+id/shop_quantity_edittext"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:hint="@string/set_quantity"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_list_scrollview" />

    <Button
        android:id="@+id/cart_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_to_cart"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_quantity_edittext" />

    <Button
        android:id="@+id/go_to_cart_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/go_to_shopping_cart"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cart_button" />


</androidx.constraintlayout.widget.ConstraintLayout>